--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
   "dependencies": {
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
-    "native-base": "^3.2.1",
+    "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
-    "styled-components": "^5.3.3",
-    "styled-system": "^5.1.5"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
