--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "lint": "yarn eslint --ext '.js,.ts,.tsx' --fix src"
   },
   "dependencies": {
-    "expo": "~43.0.0",
-    "expo-status-bar": "~1.1.0",
+    "expo": "^44.0.0-beta.1",
+    "expo-status-bar": "~1.2.0",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "~7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
