--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "format": "yarn prettier --write --list-different"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "expo": "^44.0.0-beta.1",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.1",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
