--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "strict": true,
     "baseUrl": "src",
     "paths": {
-      "@components/*": ["components/*"],
+      "@pages/*": ["pages/*"],
     }
   },
 }
