feat: implements react query and new app icons

--- a/app.json
+++ b/app.json
@@ -4,11 +4,9 @@
     "slug": "liftoff",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./src/assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -22,13 +20,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "foregroundImage": "./src/assets/adaptive-icon.png",
+        "backgroundColor": "#000"
       },
       "package": "com.viniciusmoreria.liftoff"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
     }
   }
 }
