--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "eject": "expo eject",
     "lint": "yarn eslint --ext '.js,.ts,.tsx' --fix src",
     "type-check": "tsc --noEmit",
-    "format": "yarn prettier --write --list-different"
+    "format": "yarn prettier --write --list-different '**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
     "expo": "^44.0.0-beta.1",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
@@ -28,7 +29,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-query": "^3.34.2"
   },
   "devDependencies": {
     "@babel/core": "~7.12.9",
