--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "baseUrl": "src",
     "paths": {
       "@pages/*": ["pages/*"],
+      "@types/*": ["types/*"],
+      "@config/*": ["config/*"],
+      "@hooks/*": ["hooks/*"],
     }
   },
 }
