feat: adds upcoming launches

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "@types/*": ["types/*"],
       "@config/*": ["config/*"],
       "@hooks/*": ["hooks/*"],
+      "@assets/*": ["assets/*"],
     }
   },
 }
