--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "^44.0.0-beta.1",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.1",
     "native-base": "^3.2.2",
@@ -42,6 +43,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
