feat: implements next launch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
       "@config/*": ["config/*"],
       "@hooks/*": ["hooks/*"],
       "@assets/*": ["assets/*"],
+      "@utils/*": ["utils/*"],
+      "@components/*": ["components/*"],
     }
   },
 }
