--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "expo": "^44.0.0-beta.1",
-    "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.1",
+    "lottie-react-native": "5.0.1",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -42,8 +43,8 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
