--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "liftoff",
-    "slug": "liftoff",
+    "name": "Liftoff",
+    "slug": "Liftoff",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
