--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "lottie-react-native": "5.0.1",
+    "moti": "^0.16.1",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-reanimated": "~2.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.12.9",
+    "@babel/preset-typescript": "^7.16.5",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
