--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
+    "@gorhom/bottom-sheet": "^4",
     "@motify/skeleton": "^0.16.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
@@ -30,7 +32,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-reanimated": "~2.3.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
