--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
+    "backgroundColor": "#05050B",
     "splash": {
       "backgroundColor": "#05050B"
     },
