feat: eas update setup

--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
       "backgroundColor": "#05050B"
     },
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/992860c0-c777-48bd-b67b-4f2ca4a2e6bb"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -25,6 +26,9 @@
         "backgroundColor": "#05050B"
       },
       "package": "com.viniciusmoreria.liftoff"
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
     }
   }
 }
