Feat: Implements Dripsy (#26)
* feat: implements new atoms, molecules and organisms

* refactor: useModal hook to useBottomSheet

* fix: useBottomSheet export method

* feat: implements husky lint staged

* feat: implements capsize

* fix: check types script

* refactor: remove native base

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Installing dependencies
       run: yarn
     - name: Running Type Check
-      run: yarn type-check
+      run: yarn check-types
     - name: Running Linter
       run: yarn lint
     - name: Running Prettier Format
