Feat: Implements Launch Details Screen (#31)
* feat: setup new launch detail route

* feat: new eas development config

* refactor: withAnimated component rewrote to withAnimation using reanimated layout animation

* feat: structure of the launch detail screen

* feat: detailed payload section

* feat: detailed core and mission brief section

* feat: map section

* fix: link to open device map

--- a/eas.json
+++ b/eas.json
@@ -3,28 +3,32 @@
     "version": ">= 0.40.0"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
+    "base": {
+      "env": {}
     },
-    "preview": {
+    "development": {
+      "extends": "base",
+      "developmentClient": true,
       "distribution": "internal",
-      "ios": {
-        "simulator": true
-      },
+      "releaseChannel": "default",
       "android": {
         "buildType": "apk"
+      },
+      "ios": {
+        "simulator": true
       }
     },
-    "preview2": {
+    "production": {
+      "extends": "base",
+      "distribution": "store",
+      "releaseChannel": "stable",
       "android": {
-        "gradleCommand": ":app:assembleRelease"
+        "buildType": "app-bundle"
+      }, 
+      "ios": {
+        "simulator": true
       }
-    },
-    "preview3": {
-      "developmentClient": true
-    },
-    "production": {}
+    }
   },
   "submit": {
     "production": {}
