--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@capsizecss/core": "^3.0.0",
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
-    "@gorhom/bottom-sheet": "^4",
+    "@gorhom/bottom-sheet": "^4.1.5",
     "@motify/skeleton": "^0.16.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/netinfo": "^7.1.7",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
