Feat: Implements tab navigation (#34)
* feat: implements tab navigation for tweets and profile views

* fix: useDate hook not updating value

* fix: launch detail title cutting off

* fix: lottie animation not playing on iOs

* refactor: some organisms to molecules

* fix: status bar color in android device

* feat: implements splash screen

* fix: initial animation after splash ios

* feat: implements spacex tweets screen

* fix: split launchcard into upcoming and recent cards

* feat: implements profile tab structure

--- a/.github/workflows/cd-expo.yml
+++ b/.github/workflows/cd-expo.yml
@@ -17,5 +17,9 @@ jobs:
         with:
           expo-version: 4.x
           token: ${{ secrets.EXPO_TOKEN }}
+      - run: |
+          touch .env
+          echo GOOGLE_MAPS_ANDROID =${{ secrets.GOOGLE_MAPS_ANDROID }} >> .env
+          echo GOOGLE_MAPS_IOS =${{ secrets.GOOGLE_MAPS_IOS }} >> .env
       - run: yarn install
       - run: expo publish
