--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "web": "expo start --web",
     "eject": "expo eject",
@@ -21,13 +21,17 @@
     "@gorhom/bottom-sheet": "^4.1.5",
     "@motify/skeleton": "^0.16.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/netinfo": "^7.1.7",
+    "@react-native-community/netinfo": "7.1.3",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
     "dripsy": "^3.6.0",
     "expo": "^44.0.0-beta.1",
+    "expo-blur": "~11.0.0",
+    "expo-constants": "~13.0.1",
+    "expo-dev-client": "~0.8.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
@@ -38,14 +42,16 @@
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-maps": "0.29.4",
-    "react-native-reanimated": "^2.3.1",
+    "react-native-pager-view": "5.4.9",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
     "react-native-youtube-iframe": "^2.2.2",
-    "react-query": "^3.34.2"
+    "react-query": "^3.34.12"
   },
   "devDependencies": {
     "@babel/core": "~7.12.9",
@@ -54,6 +60,7 @@
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -64,8 +71,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": ">=6",
-    "lint-staged": ">=10",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.1",
     "prettier": "^2.4.1",
     "typescript": "^4.5.4"
   },
