--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "web": "expo start --web",
@@ -35,6 +35,7 @@
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "0.11.2",
     "lottie-react-native": "5.0.1",
     "moti": "^0.16.1",
     "react": "17.0.1",
