--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "expo-blur": "~11.0.0",
     "expo-constants": "~13.0.1",
     "expo-dev-client": "~0.8.0",
+    "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
-    "expo-updates": "0.11.2",
+    "expo-updates": "~0.11.5",
     "lottie-react-native": "5.0.1",
     "moti": "^0.16.1",
     "react": "17.0.1",
