--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.0",
+    "expo-localization": "~12.0.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.5",
     "lottie-react-native": "5.0.1",
