--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.1",
     "prettier": "^2.4.1",
+    "standard-version": "^7.1.0",
+    "standard-version-expo": "^1.0.3",
     "typescript": "^4.5.4"
   },
   "lint-staged": {
