--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liftoff",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "private": true,
   "scripts": {
@@ -36,8 +36,10 @@
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.0",
+    "expo-linking": "~3.0.0",
     "expo-localization": "~12.0.0",
     "expo-status-bar": "~1.2.0",
+    "expo-store-review": "~5.1.0",
     "expo-updates": "~0.11.5",
     "lottie-react-native": "5.0.1",
     "moti": "^0.16.1",
