--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
     "@gorhom/bottom-sheet": "^4.1.5",
-    "@motify/skeleton": "^0.16.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/netinfo": "7.1.3",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
+    "date-fns-tz": "^1.2.2",
     "dripsy": "^3.6.0",
     "expo": "^44.0.0-beta.1",
     "expo-blur": "~11.0.0",
@@ -42,7 +43,7 @@
     "expo-store-review": "~5.1.0",
     "expo-updates": "~0.11.5",
     "lottie-react-native": "5.0.1",
-    "moti": "^0.16.1",
+    "moti": "^0.17.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -52,6 +53,7 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
