--- a/app.json
+++ b/app.json
@@ -34,6 +34,13 @@
         {
           "photosPermission": "The app accesses your photos to customize your experience."
         }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./src/assets/icon.png",
+          "color": "#16171B"
+        }
       ]
     ]
   }
