--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
+    "expo-intent-launcher": "~10.1.0",
     "expo-linear-gradient": "~11.0.0",
     "expo-linking": "~3.0.0",
     "expo-localization": "~12.0.0",
+    "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-store-review": "~5.1.0",
     "expo-updates": "~0.11.5",
