--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-status-bar": "~1.2.0",
     "expo-store-review": "~5.1.0",
     "expo-updates": "~0.11.5",
+    "expo-web-browser": "~10.1.0",
     "lottie-react-native": "5.0.1",
     "moti": "^0.17.1",
     "react": "17.0.1",
