feat: implements sentry to catch errors in production (#47)

--- a/app.json
+++ b/app.json
@@ -41,7 +41,8 @@
           "icon": "./src/assets/icon.png",
           "color": "#16171B"
         }
-      ]
+      ],
+      "sentry-expo"
     ]
   }
 }
