--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@sentry/react-native": "^3.2.13",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
     "dripsy": "^3.6.0",
     "expo": "^44.0.0-beta.1",
+    "expo-application": "~4.0.1",
     "expo-blur": "~11.0.0",
     "expo-constants": "~13.0.1",
     "expo-dev-client": "~0.8.0",
@@ -42,7 +44,7 @@
     "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-store-review": "~5.1.0",
-    "expo-updates": "~0.11.5",
+    "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
     "lottie-react-native": "5.0.1",
     "moti": "^0.17.1",
@@ -61,7 +63,8 @@
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
     "react-native-youtube-iframe": "^2.2.2",
-    "react-query": "^3.34.12"
+    "react-query": "^3.34.12",
+    "sentry-expo": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.12.9",
