--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Liftoff",
     "slug": "Liftoff",
     "description": "A SpaceX Tracker App",
+    "privacy": "public",
     "primaryColor": "#16171B",
     "version": "1.3.1",
     "orientation": "portrait",
