feat: snap profile picture (#53)
* feat: allows user to snap a new profile picture with the device camera

* build: new expo publish scripts

* build: fix staging publish script

--- a/app.json
+++ b/app.json
@@ -32,9 +32,7 @@
     "notification": {
       "icon": "./src/assets/push-icon.png",
       "color": "#16171B",
-      "iosDisplayInForeground": true,
-      "androidMode": "collapse",
-      "androidCollapsedTitle": "#{unread_notifications} new updates"
+      "iosDisplayInForeground": true
     },
     "plugins": [
       [
