--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "ios": "expo start -c --ios",
     "web": "expo start --web",
     "eject": "expo eject",
+    "publish-staging": "expo publish",
+    "publish-prod": "expo publish --release-channel production",
     "lint": "eslint --ext '.js,.ts,.tsx' --fix src",
     "format": "yarn prettier --write --list-different '**/*.{ts,tsx}'",
     "check-types": "yarn tsc -p tsconfig.json --noEmit",
@@ -37,7 +39,7 @@
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-intent-launcher": "~10.1.0",
-    "expo-linear-gradient": "~11.0.1",
+    "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
     "expo-localization": "~12.0.0",
     "expo-notifications": "~0.14.0",
