--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
     "expo-store-review": "~5.1.0",
     "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
+    "intl": "^1.2.5",
+    "lodash": "^4.17.21",
     "lottie-react-native": "5.0.1",
     "moti": "^0.17.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-intl": "^5.24.6",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-maps": "0.29.4",
@@ -70,6 +73,7 @@
   "devDependencies": {
     "@babel/core": "~7.12.9",
     "@babel/preset-typescript": "^7.16.5",
+    "@types/lodash": "^4.14.178",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
