--- a/app.json
+++ b/app.json
@@ -12,9 +12,8 @@
     "splash": {
       "backgroundColor": "#16171B"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
+    "jsEngine": "hermes",
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.viniciusmoreria.liftoff",
