--- a/app.json
+++ b/app.json
@@ -5,19 +5,21 @@
     "description": "A SpaceX Tracker App",
     "privacy": "public",
     "primaryColor": "#16171B",
-    "version": "1.3.2",
+    "version": "1.3.4",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
     "backgroundColor": "#16171B",
     "splash": {
       "backgroundColor": "#16171B"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "jsEngine": "hermes",
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.viniciusmoreria.liftoff",
-      "buildNumber": "1.3.2"
+      "buildNumber": "1.3.4"
     },
     "android": {
       "adaptiveIcon": {
@@ -26,7 +28,7 @@
       },
       "package": "com.viniciusmoreria.liftoff",
       "playStoreUrl": "https://play.google.com/store/apps/details?id=com.viniciusmoreria.liftoff",
-      "versionCode": 440010302
+      "versionCode": 440010304
     },
     "notification": {
       "icon": "./src/assets/push-icon.png",
