--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@capsizecss/core": "^3.0.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/material-top-tabs": "^6.2.1",
@@ -44,7 +45,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
-    "sentry-expo": "^4.2.0"
+    "sentry-expo": "^4.2.0",
+    "twrnc": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -65,6 +67,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "standard-version": "^9.5.0",
     "standard-version-expo": "^1.0.3",
     "typescript": "~4.3.5"
