--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@capsizecss/core": "^3.0.0",
+    "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/material-top-tabs": "^6.2.1",
@@ -25,16 +26,18 @@
     "@react-navigation/stack": "^6.2.1",
     "@sentry/react-native": "^3.4.3",
     "axios": "^0.27.2",
-    "expo": "~45.0.0",
+    "expo": "^45.0.2",
     "expo-application": "~4.1.0",
     "expo-blur": "~11.1.0",
     "expo-constants": "~13.1.1",
     "expo-dev-client": "~1.0.0",
     "expo-device": "~4.2.0",
+    "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
-    "expo-notifications": "~0.15.2",
+    "expo-notifications": "~0.15.3",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.2",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -51,19 +54,19 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/react-native": "~0.66.13",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@types/react-native": "0.67.6",
+    "@typescript-eslint/eslint-plugin": "5.23.0",
+    "@typescript-eslint/parser": "5.23.0",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-unused-imports": "1.1.5",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
     "prettier": "^2.6.2",
@@ -71,6 +74,11 @@
     "standard-version": "^9.5.0",
     "standard-version-expo": "^1.0.3",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "babel-preset-expo": "9.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
