--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "expo-application": "~4.1.0",
     "expo-blur": "~11.1.0",
     "expo-constants": "~13.1.1",
-    "expo-dev-client": "~1.0.0",
+    "expo-dev-client": "~1.0.1",
     "expo-device": "~4.2.0",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
-    "expo-notifications": "~0.15.3",
+    "expo-notifications": "~0.15.4",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo-updates": "~0.13.3",
     "lottie-react-native": "5.0.1",
+    "nativewind": "^2.0.0-next.53",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -48,8 +49,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
-    "sentry-expo": "^4.2.0",
-    "twrnc": "^3.3.2"
+    "sentry-expo": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -70,9 +70,9 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
     "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.11",
     "standard-version": "^9.5.0",
     "standard-version-expo": "^1.0.3",
+    "tailwindcss": "^3.1.7",
     "typescript": "~4.3.5"
   },
   "resolutions": {
