--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@capsizecss/core": "^3.0.0",
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-masked-view/masked-view": "0.2.6",
@@ -33,6 +32,7 @@
     "expo-image-picker": "~13.1.1",
     "expo-notifications": "~0.15.4",
     "expo-status-bar": "~1.3.0",
+    "expo-system-ui": "~1.2.0",
     "expo-updates": "~0.13.4",
     "lottie-react-native": "5.1.1",
     "nativewind": "^2.0.0-next.53",
