--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.4",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start -c",
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "web": "expo start --web",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.7.0",
@@ -26,7 +27,6 @@
     "expo": "^45.0.2",
     "expo-application": "~4.1.0",
     "expo-constants": "~13.1.1",
-    "expo-dev-client": "~1.0.1",
     "expo-device": "~4.2.0",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
@@ -46,6 +46,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
+    "react-query": "^3.39.2",
     "sentry-expo": "^4.2.0"
   },
   "devDependencies": {
