--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@capsizecss/core": "^3.0.0",
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -35,7 +36,7 @@
     "expo-system-ui": "~1.2.0",
     "expo-updates": "~0.13.4",
     "lottie-react-native": "5.1.1",
-    "nativewind": "^2.0.0-next.53",
+    "nativewind": "^2.0.0-next.58",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -70,7 +71,7 @@
     "prettier": "^2.6.2",
     "standard-version": "^9.5.0",
     "standard-version-expo": "^1.0.3",
-    "tailwindcss": "^3.1.7",
+    "tailwindcss": "^3.1.8",
     "typescript": "~4.3.5"
   },
   "resolutions": {
