--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start -c",
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
+    "dev": "expo start -c --dev-client",
     "web": "expo start --web",
     "eject": "expo eject",
     "publish-staging": "expo publish",
@@ -20,6 +21,10 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-firebase/analytics": "^15.4.0",
+    "@react-native-firebase/app": "^15.4.0",
+    "@react-native-firebase/perf": "^15.4.0",
+    "@react-native-firebase/remote-config": "^15.4.0",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.7.0",
@@ -27,7 +32,9 @@
     "axios": "^0.27.2",
     "expo": "^45.0.2",
     "expo-application": "~4.1.0",
+    "expo-build-properties": "~0.2.0",
     "expo-constants": "~13.1.1",
+    "expo-dev-client": "~1.0.1",
     "expo-device": "~4.2.0",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
