--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.7.0",
     "@sentry/react-native": "^3.4.3",
+    "@tanstack/react-query": "^4.2.3",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
     "expo": "^45.0.2",
     "expo-application": "~4.1.0",
     "expo-build-properties": "~0.2.0",
@@ -54,7 +56,6 @@
     "react-native-screens": "~3.11.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
-    "react-query": "^3.39.2",
     "sentry-expo": "^4.2.0"
   },
   "devDependencies": {
