--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/analytics": "^15.4.0",
     "@react-native-firebase/app": "^15.4.0",
+    "@react-native-firebase/firestore": "^15.4.0",
     "@react-native-firebase/perf": "^15.4.0",
     "@react-native-firebase/remote-config": "^15.4.0",
     "@react-native-masked-view/masked-view": "0.2.6",
