--- a/eas.json
+++ b/eas.json
@@ -12,8 +12,7 @@
       "releaseChannel": "development",
       "developmentClient": true,
       "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
+        "gradleCommand": ":app:assembleDebug"
       },
       "ios": {
         "simulator": true
