--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.7.0",
     "@sentry/react-native": "^3.4.3",
+    "@shopify/flash-list": "^1.2.2",
     "@tanstack/react-query": "^4.2.3",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
