--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "expo-device": "~4.2.0",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
+    "expo-linear-gradient": "~11.3.0",
     "expo-notifications": "~0.15.4",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
     "expo-updates": "~0.13.4",
     "lottie-react-native": "5.1.1",
+    "moti": "^0.18.0",
     "nativewind": "^2.0.0-next.58",
     "react": "17.0.2",
     "react-dom": "17.0.2",
