--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@capsizecss/core": "^3.0.0",
     "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/analytics": "^15.4.0",
     "@react-native-firebase/app": "^15.4.0",
