--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "baseUrl": "src",
     "paths": {
       "@assets/*": ["assets/*"],
@@ -12,6 +14,7 @@
       "@navigation/*": ["navigation/*"],
       "@features/*": ["features/*"],
       "@providers/*": ["providers/*"],
+      "@store/*": ["store/*"],
       "@styles/*": ["styles/*"]
     }
   }
