fix: remove use-expo-updates

--- a/app.json
+++ b/app.json
@@ -16,9 +16,6 @@
       "fallbackToCacheTimeout": 0,
       "url": "https://u.expo.dev/992860c0-c777-48bd-b67b-4f2ca4a2e6bb"
     },
-    "runtimeVersion": {
-      "policy": "sdkVersion"
-    },
     "assetBundlePatterns": ["**/*"],
     "jsEngine": "jsc",
     "ios": {
@@ -41,6 +38,9 @@
       "icon": "./src/assets/push-icon.png",
       "color": "#16171B",
       "iosDisplayInForeground": true
+    },
+    "runtimeVersion": {
+      "policy": "nativeVersion"
     },
     "plugins": [
       [
