feat: upgrade expo

--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,7 @@
     },
     "development": {
       "extends": "base",
+      "developmentClient": true,
       "distribution": "internal",
       "env": {
         "STAGE": "development"
