--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-firebase/analytics": "^15.4.0",
-    "@react-native-firebase/app": "^15.4.0",
-    "@react-native-firebase/firestore": "^15.4.0",
-    "@react-native-firebase/messaging": "^15.5.0",
-    "@react-native-firebase/perf": "^15.4.0",
-    "@react-native-firebase/remote-config": "^15.4.0",
+    "@react-native-firebase/analytics": "^14.11.0",
+    "@react-native-firebase/app": "~14.11.0",
+    "@react-native-firebase/firestore": "^14.11.0",
+    "@react-native-firebase/messaging": "^14.11.0",
+    "@react-native-firebase/perf": "^14.11.0",
+    "@react-native-firebase/remote-config": "^14.11.0",
     "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/elements": "^1.3.6",
     "@react-navigation/native": "^6.0.11",
@@ -50,20 +50,24 @@
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-updates": "~0.14.5",
+    "expo-web-browser": "~11.0.0",
     "lottie-react-native": "5.1.3",
     "moti": "^0.18.0",
     "nativewind": "^2.0.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0",
+    "react-native-youtube-iframe": "^2.2.2",
     "sentry-expo": "~5.0.0",
     "zustand": "^4.1.1"
   },
@@ -92,9 +96,9 @@
     "typescript": "^4.6.3"
   },
   "resolutions": {
-    "babel-preset-expo": "9.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "babel-preset-expo": "~9.2.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native-safe-area-context": "4.3.1"
   },
   "lint-staged": {
