--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
       "url": "https://u.expo.dev/992860c0-c777-48bd-b67b-4f2ca4a2e6bb"
     },
     "assetBundlePatterns": ["**/*"],
-    "jsEngine": "jsc",
+    "jsEngine": "hermes",
     "ios": {
       "bitcode": false,
       "supportsTablet": true,
@@ -74,6 +74,7 @@
           }
         }
       ],
+      "./plugins/with-rn-maps-workaround.js",
       "@react-native-firebase/app",
       "@react-native-firebase/perf",
       "sentry-expo"
