--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start -c",
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
-    "dev": "expo start -c --dev-client",
+    "dev": "expo start --dev-client --force-manifest-type=classic -c",
     "web": "expo start --web",
     "eject": "expo eject",
     "publish-staging": "expo publish",
@@ -37,9 +37,10 @@
     "@tanstack/react-query": "^4.2.3",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
-    "expo": "~46.0.9",
+    "expo": "~46.0.13",
     "expo-application": "~4.2.2",
     "expo-build-properties": "~0.3.0",
+    "expo-community-flipper": "^46.0.1",
     "expo-constants": "~13.2.4",
     "expo-dev-client": "~1.2.1",
     "expo-device": "~4.3.0",
@@ -56,8 +57,9 @@
     "nativewind": "^2.0.10",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-flash-message": "^0.3.1",
+    "react-native-flipper": "^0.164.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-maps": "1.3.2-beta.1",
     "react-native-pager-view": "5.4.24",
@@ -90,6 +92,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
     "prettier": "^2.6.2",
+    "react-query-native-devtools": "^4.0.0",
     "standard-version": "^9.5.0",
     "standard-version-expo": "^1.0.3",
     "tailwindcss": "^3.1.8",
