--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,12 +4,11 @@ on: [pull_request]
 
 jobs:
   build:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Set up repository
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
       - name: Setting up Node
         uses: actions/setup-node@v3
