--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up repository
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Setting up Node
         uses: actions/setup-node@v3
