--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -63,12 +63,8 @@ jobs:
         uses: expo/expo-github-action/preview-comment@7.2.0
         with:
           message: |
-            ## PR Preview - ${{ github.event.pull_request.title }}
-
             This pull request preview deployment is now available.
 
-            ✅ Preview: <a href="${{ steps.publish-url.outputs.url }}">${{ steps.publish-url.outputs.url }}</a>
+            <h3>Channel: pr-${{ github.event.number }}</h3>
 
-            <a href="${{ steps.publish-url.outputs.url }}"><img src="https://api.qrserver.com/v1/create-qr-code/?size=256x256&data=${{ steps.publish-url.outputs.url }}" height="256px" width="256px" /></a>
-
-            Comment ID: ${{ steps.existing-comment.outputs.comment-id }}
+            <a href="href="${{ steps.publish-url.outputs.url }}"><img src="https://qr.expo.dev/development-client?appScheme=exp%2Bcom.viniciusmoreria.liftoff&url=https://u.expo.dev/992860c0-c777-48bd-b67b-4f2ca4a2e6bb%3Fchannel-name%3Dpr-${{ github.event.number }}" height="200px" width="200px"></a>'
