--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -53,7 +53,7 @@ jobs:
         run: yarn install --immutable
 
       - name: EAS Update
-        run: eas update --branch pr-${{ github.event.number }} --message 'Update with commit ${{ github.sha }}'
+        run: NODE_OPTIONS=--max-old-space-size=5120 eas update --branch pr-${{ github.event.number }} --message 'Update with commit ${{ github.sha }}'
 
       - name: Preview Deep Link
         id: publish-url
@@ -65,6 +65,6 @@ jobs:
           message: |
             This pull request preview deployment is now available.
 
-            Channel: pr-${{ github.event.number }}
+            Channel: PR-${{ github.event.number }}
 
             <a href="${{ steps.publish-url.outputs.url }}"><img src="https://qr.expo.dev/development-client?appScheme=com.viniciusmoreria.liftoff&url=https://u.expo.dev/992860c0-c777-48bd-b67b-4f2ca4a2e6bb&channel-name=pr-${{ steps.PR.outputs.number }}" height="200px" width="200px"></a>'
